WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109326
[skia] Fix memory management in SkiaImageFilterBuilder and friends.
https://bugs.webkit.org/show_bug.cgi?id=109326
Summary
[skia] Fix memory management in SkiaImageFilterBuilder and friends.
Stephen White
Reported
2013-02-08 14:47:10 PST
[skia] Fix memory management in SkiaImageFilterBuilder and friends.
Attachments
Patch
(10.65 KB, patch)
2013-02-08 14:51 PST
,
Stephen White
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephen White
Comment 1
2013-02-08 14:51:53 PST
Created
attachment 187367
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-09 11:06:59 PST
Comment on
attachment 187367
[details]
Patch Clearing flags on attachment: 187367 Committed
r142372
: <
http://trac.webkit.org/changeset/142372
>
WebKit Review Bot
Comment 3
2013-02-09 11:07:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug