Source/WebCore/platform/graphics/filters/skia/FELightingSkia.cpp
@@ -38,7 +38,7 @@ namespace WebCore {
 
 SkImageFilter* FELighting::createImageFilter(SkiaImageFilterBuilder* builder)
 {
-    SkImageFilter* input = builder ? builder->build(inputEffect(0)) : 0;
+    SkAutoTUnref<SkImageFilter> input(builder ? builder->build(inputEffect(0)) : 0);
     switch (m_lightSource->type()) {
     case LS_DISTANT: {
         DistantLightSource* distantLightSource = static_cast<DistantLightSource*>(m_lightSource.get());
